--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,20 +30,20 @@ repos:
   - id: black
     language_version: python3.7
 
-#- repo: https://github.com/pre-commit/mirrors-autopep8
-  #rev: v1.5.7
-  #hooks:
-  #- id: autopep8
+- repo: https://github.com/pre-commit/mirrors-autopep8
+  rev: v1.5.7
+  hooks:
+  - id: autopep8
 
 - repo: https://github.com/pre-commit/mirrors-isort
   rev: v5.8.0
   hooks:
   - id: isort
 
-#- repo: https://gitlab.com/pycqa/flake8
-  #rev: 3.9.2
-  #hooks:
-  #- id: flake8
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.9.2
+  hooks:
+  - id: flake8
 
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.8.0
