--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,10 +50,10 @@ repos:
   hooks:
   - id:  pyupgrade
 
-- repo: https://github.com/PyCQA/bandit
-  rev: 1.7.0
-  hooks:
-  - id: bandit
+#- repo: https://github.com/PyCQA/bandit
+#  rev: 1.7.0
+#  hooks:
+#  - id: bandit
 
 #- repo: https://github.com/PyCQA/pylint
   #rev: v2.8.2
