--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py39,pre-commit
+envlist = py38,pre-commit
 
 [testenv]
-deps = -r requirements-dev.txt
+deps = -rrequirements-dev.txt
 commands =
     coverage erase
-    coverage run -m pytest (posargs:tests)
-    coverage report --all-under 100
+    coverage run -m pytest
+    coverage report --fail-under 100
     pre-commit install
 
 [testenv:pre-commit]
