--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,11 +65,11 @@ repos:
   hooks:
   - id: detect-secrets
 
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
-    hooks:
-    -   id: detect-aws-credentials
-    -   id: detect-private-key
+#-   repo: https://github.com/pre-commit/pre-commit-hooks
+    #rev: v3.2.0
+    #hooks:
+#    -   id: detect-aws-credentials
+#    -   id: detect-private-key
 
 #- repo: https://github.com/ambv/black
   #rev: 21.5b1
